[package]
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]
categories = ["web-programming::http-server", "network-programming", "algorithms"]
description = "A high performance HTTP request router that scales well."
edition = "2018"
keywords = ["hyper", "path", "tree", "radix", "router"]
license = "MIT"
name = "treemux"
readme = "README.md"
repository = "https://github.com/casualjim/rs-treemux/"
version = "0.5.1"

[features]
default = []
native-tls = ["hyper-tls"]
rustls = ["hyper-rustls", "tokio-rustls"]
full = [ "hyper-staticfile", "async-compression" ]

[dependencies]
anyhow = "1"
thiserror = "1"
flate2 = "1"
futures = "0.3"
futures-util = "0.3"
kv-log-macro = "1"
percent-encoding = "2"
tokio = "1"
tower-service = "0.3"
tower-layer = "0.3"
hyper-tls = { version = "0.5", optional = true }
hyper-rustls = { version = "0.22", optional = true }
tokio-rustls = { version = "0.22", optional = true }
hyper-staticfile = { version = "0.6", optional = true }
async-compression = { version = "0.3", optional = true }

[dependencies.hyper]
features = ["server", "tcp", "http1", "http2"]
version = "0.14"

[dependencies.log]
features = ["kv_unstable_std"]
version = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"
serde = "1"
serde_json = "1"
hyper-staticfile = "0.6"

[dev-dependencies.femme]
branch = "allow-test-usage"
git = "https://github.com/casualjim/femme"

[dev-dependencies.tokio]
features = ["full"]
version = "1"

[[example]]
name = "jsonapi"
path = "examples/jsonapi.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "staticfile"
path = "examples/staticfile.rs"
required-features = ["hyper-staticfile"]

[[example]]
name = "middlewares"
path = "examples/middlewares.rs"

[[example]]
name = "scoping"
path = "examples/scoping.rs"
