[package]
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]
categories = ["web-programming::http-server", "network-programming", "algorithms"]
description = "A high performance HTTP request router that scales well."
edition = "2018"
keywords = ["hyper", "path", "tree", "radix", "router"]
license = "MIT"
name = "treemux"
readme = "README.md"
repository = "https://github.com/casualjim/rs-treemux/"
version = "0.6.1"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
native-tls = ["hyper-tls"]
rustls = ["hyper-rustls", "tokio-rustls"]
full = [ "hyper-staticfile", "async-compression", "tracing", "tracing-log" ]


[dependencies]
anyhow = "1"
thiserror = "1"
flate2 = "1"
futures = "0.3"
futures-util = "0.3"
percent-encoding = "2"
tokio = "1"
tower-service = "0.3"
tower-layer = "0.3"
hyper-tls = { version = "0.5", optional = true }
hyper-rustls = { version = "0.22", optional = true }
tokio-rustls = { version = "0.22", optional = true }
hyper-staticfile = { version = "0.6", optional = true }
async-compression = { version = "0.3", optional = true }
tracing = { version="0.1", optional = true }
tracing-log = { version="0.1", optional = true }

[dependencies.hyper]
features = ["server", "tcp", "http1", "http2"]
version = "0.14"

[dev-dependencies]
env_logger = "0.8"
serde = "1"
serde_json = "1"
hyper-staticfile = "0.6"
tracing-subscriber =  {version = "0.2", features = ["chrono", "env-filter", "fmt"]}
test-env-log = "0.2"

[dev-dependencies.tokio]
features = ["full"]
version = "1"

[[example]]
name = "jsonapi"
path = "examples/jsonapi.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "staticfile"
path = "examples/staticfile.rs"
required-features = ["hyper-staticfile"]

[[example]]
name = "middlewares"
path = "examples/middlewares.rs"

[[example]]
name = "scoping"
path = "examples/scoping.rs"
