[package]
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]
categories = ["web-programming::http-server", "network-programming", "algorithms"]
description = "A high performance HTTP request router that scales well."
edition = "2021"
keywords = ["hyper", "path", "tree", "radix", "router"]
license = "MIT"
name = "treemux"
readme = "README.md"
repository = "https://github.com/casualjim/rs-treemux/"
version = "0.8.5"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
native-tls = ["hyper-tls"]
rustls = ["hyper-rustls", "tokio-rustls"]
full = [ "hyper-staticfile", "async-compression", "tracing" ]


[dependencies]
anyhow = "1"
thiserror = "1"
flate2 = "1"
futures = "0.3"
futures-util = "0.3"
percent-encoding = "2"
tokio = "1"
tower-service = "0.3"
tower-layer = "0.3"
hyper-tls = { version = "0.5", optional = true }
hyper-rustls = { version = "0.24", optional = true }
hyper-staticfile = { version = "0.9", optional = true }
tokio-rustls = { version = "0.24", optional = true }
async-compression = { version = "0.4", optional = true }
tracing = { version="0.1", optional = true }
cookie = { version="0.17", optional = true }

[dependencies.hyper]
features = ["server", "tcp", "http1", "http2"]
version = "0.14"

[dev-dependencies]
env_logger = "0.10"
serde = "1"
serde_json = "1"
hyper-staticfile = "0.9"
tracing = { version="0.1" }
tracing-subscriber =  {version = "0.3.15", features = ["env-filter", "fmt"]}
test-log = "0.2"

[dev-dependencies.tokio]
features = ["full"]
version = "1"

[[example]]
name = "jsonapi"
path = "examples/jsonapi.rs"
required-features = ["tracing"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "staticfile"
path = "examples/staticfile.rs"
required-features = ["hyper-staticfile"]

[[example]]
name = "middlewares"
path = "examples/middlewares.rs"
required-features = ["tracing"]

[[example]]
name = "scoping"
path = "examples/scoping.rs"

[[example]]
name = "cors"
path = "examples/cors.rs"

